style: non authorized dark mode fix

--- a/src/ui/pages/notSignUp/notLog.module.scss
+++ b/src/ui/pages/notSignUp/notLog.module.scss
@@ -20,4 +20,13 @@
       }
     }
   }
+
+  .darkTheme {
+    .hiddenContent {
+      fill: #fff;
+    }
+    h3 {
+      color: #fff;
+    }
+  }
 }
